add twig files and minimal ui with form for user input

--- a/views/root.html.twig
+++ b/views/root.html.twig
@@ -5,6 +5,10 @@
         <title></title>
     </head>
     <body>
-        {{result}}
+        <form class="" action="/see_count" method="post">
+            <input type="text" name="userinput1" placeholder="enter a sentence">
+            <input type="text" name="userinput2" placeholder="enter a word to count">
+            <button type="submit">See count!</button>
+        </form>
     </body>
 </html>
