--- a/views/root.html.twig
+++ b/views/root.html.twig
@@ -2,13 +2,22 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Homepage</title>
+        <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="/css/styles.css" rel="stylesheet" type="text/css">
+        <script src="/js/jquery-3.1.1.js"></script>
+        <script src="/js/scripts.js"></script>
     </head>
     <body>
-        <form class="" action="/see_count" method="post">
-            <input type="text" name="userinput1" placeholder="enter a sentence">
-            <input type="text" name="userinput2" placeholder="enter a word to count">
-            <button type="submit">See count!</button>
-        </form>
+        <div class="container">
+            <div class="jumbotron-fluid">
+            <h1>Repeat Word Counter</h1>
+            </div>
+            <form class="form-group" action="/see_count" method="post">
+                <input type="text" name="userinput1" placeholder="enter a sentence">
+                <input type="text" name="userinput2" placeholder="enter a word to count">
+                <button class="btn" type="submit">See count!</button>
+            </form>
+        </div>
     </body>
 </html>
