--- a/views/see_count.html.twig
+++ b/views/see_count.html.twig
@@ -3,12 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Word Count</title>
+        <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="/css/styles.css" rel="stylesheet" type="text/css">
+        <script src="/js/jquery-3.1.1.js"></script>
+        <script src="/js/scripts.js"></script>
     </head>
     <body>
         <div class="container">
             <p>Your sentence: {{ input1 }}</p>
             <p>Your word to count: {{ input2 }}</p>
             <p>Your word count: {{ result }}</p>
+            <a href="/"><button class="btn">Go back</button></a>
         </div>
     </body>
 </html>
