--- a/views/see_count.html.twig
+++ b/views/see_count.html.twig
@@ -5,15 +5,18 @@
         <title>Word Count</title>
         <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="/css/styles.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
         <script src="/js/jquery-3.1.1.js"></script>
         <script src="/js/scripts.js"></script>
     </head>
     <body>
         <div class="container">
-            <p>Your sentence: {{ input1 }}</p>
-            <p>Your word to count: {{ input2 }}</p>
-            <p>Your word count: {{ result }}</p>
-            <a href="/"><button class="btn">Go back</button></a>
+            <div id="results-div">
+                <p>Your sentence: {{ input1 }}</p>
+                <p>Your word to count: {{ input2 }}</p>
+                <p>Your word count: {{ result }}</p>
+                <a href="/"><button class="btn btn-lg">Go back</button></a>
+            </div>
         </div>
     </body>
 </html>
