--- a/views/root.html.twig
+++ b/views/root.html.twig
@@ -5,7 +5,7 @@
         <title>Homepage</title>
         <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="/css/styles.css" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Dosis:400,600" rel="stylesheet">
         <script src="/js/jquery-3.1.1.js"></script>
         <script src="/js/scripts.js"></script>
     </head>
