--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,3 +1,4 @@
+/*general styles*/
 
 body {
     background-image: url("/../img/counter.jpg");
@@ -5,62 +6,60 @@ body {
     background-size: cover;
     font-family: 'Dosis', sans-serif;
 }
-.container-fluid {
-
-}
-
-.jumbotron {
-    opacity: 0.5;
-    background-color: #A9BCD0;
-    height: 5%;
-    width: 100%;
-    text-align: center;
-}
-#jumbo-header {
-    /*font-family: 'Sansita', sans-serif;*/
-    color: #373F51;
-    font-size: 70;
-    letter-spacing: 5px;
-}
-
-#form-div {
-    border-radius: 3px;
-    background-color: #A9BCD0;
-    opacity: 0.5;
-    margin-top: 25%;
-    margin-right: auto;
-    margin-left: auto;
-    text-align: center;
-    width: 50%;
-    height: 5%;
-    padding-top: 2%;
-}
-
-/*see_count.html.twig styles*/
-#results-div {
-    border-radius: 3px;
-    background-color: #A9BCD0;
-    opacity: 0.5;
-    margin-top: 25%;
-    margin-right: auto;
-    margin-left: auto;
-    text-align: center;
-    width: 50%;
-    height: 5%;
-    padding-top: 2%;
-    font-size: 16px;
-}
-
-#results-div p {
-
-}
 
 .btn {
     background-color: #58A4B0;
     color: white;
 }
 
+
+/*root.html.twig styles*/
+
+.jumbotron {
+    background:rgba(255,255,255,0.5);
+    height: 5%;
+    width: 100%;
+    text-align: center;
+}
+#jumbo-header {
+    color: #373F51;
+    font-size: 90px;
+    letter-spacing: 7px;
+    /*font-weight: bold;*/
+}
+
+#form-div {
+    border-radius: 3px;
+    background-color: #A9BCD0;
+    background:rgba(255,255,255,0.5);
+    margin-top: 10%;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    width: 70%;
+    height: 5%;
+    padding-top: 3%;
+    padding-bottom: 2%;
+    font-size: 22px;
+}
+
 input {
     border-radius: 3px;
-    font-size: 16px;
+    /*font-size: 16px;*/
+}
+
+/*see_count.html.twig styles*/
+#results-div {
+    border-radius: 3px;
+    background-color: #A9BCD0;
+    background:rgba(255,255,255,0.5);
+    margin-top: 20%;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    width: 50%;
+    height: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    font-size: 22px;
 }
