improve CountRepeat method to not count partial matches

--- a/views/see_count.html.twig
+++ b/views/see_count.html.twig
@@ -15,7 +15,7 @@
                 <p><strong>Your sentence:</strong> {{ input1 }}</p>
                 <p><strong>Your word to count: </strong> {{ input2 }}</p>
                 <p><strong>Your word count: </strong> {{ result }}</p>
-                <p><strong> Your word definition </strong><br> {{ definition }} </p>
+                <p><strong> Your word definition </strong> {{ definition }} </p>
                 <a href="/"><button class="btn btn-lg">Go back</button></a>
             </div>
         </div>
