--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -18,7 +18,7 @@ body {
 
 .jumbotron {
     background:rgba(255,255,255,0.5);
-    height: 5%;
+    height: 4%;
     width: 100%;
     text-align: center;
 }
@@ -26,19 +26,18 @@ body {
     color: #373F51;
     font-size: 90px;
     letter-spacing: 7px;
-    /*font-weight: bold;*/
 }
 
 #form-div {
     border-radius: 3px;
     background-color: #A9BCD0;
     background:rgba(255,255,255,0.5);
-    margin-top: 10%;
+    margin-top: 7%;
     margin-right: auto;
     margin-left: auto;
     text-align: center;
-    width: 70%;
     height: 5%;
+    width: 600px;
     padding-top: 3%;
     padding-bottom: 2%;
     font-size: 22px;
@@ -54,12 +53,11 @@ input {
     border-radius: 3px;
     background-color: #A9BCD0;
     background:rgba(255,255,255,0.5);
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 10%;
+    margin-bottom: 10%;
     margin-right: auto;
     margin-left: auto;
     text-align: center;
-    width: 50%;
     height: 5%;
     padding: 2%;
     font-size: 22px;
